# djangocms-darksky-api

./: .gitignore  MANIFEST.in  README.md  setup.cfg  tests_settings.py
djangocms_darksky_api/: .gitignore  README.md  apps.py  cms_plugins.py  models.py
djangocms_darksky_api/conf/: settings.py
djangocms_darksky_api/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_darksky_api/migrations/: 0001_initial.py  0002_darkskyapi_template.py  0003_auto_20200113_1036.py  0004_auto_20200114_1427.py  0005_auto_20200114_1430.py
djangocms_darksky_api/templates/: darkskyapi.html  darkskyapi_ME.html  darkskyapi_SM.html  darkskyapi_full.html  darkskyapi_light.html
djangocms_darksky_api/templatetags/: day_of_week.py  get_datetime_from_timestamp.py
tests/: tests.py
