[metadata]
name = djangocms-darksky-api
version = 0.0.1
description = This djangocms plugin allows you to add a weather indicator on your pages, using the Dark Sky API (https://darksky.net/dev/docs).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kapt-labs/djangocms-darksky-api
author = Dev Kapt
author_email = dev@kapt.mobi
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    django<3.0
    django-cms
    requests
